# tinyrenderer

./: .gitignore  CMakeLists.txt  Makefile  build.zig  build.zig.zon  camera.cpp  camera.h  color.cpp  color.h  geometry.cpp  geometry.h  gl.cpp  gl.h  image.cpp  image.h  main.cpp  model.cpp  model.h  render.cpp  render.h  shader.cpp  shader.h  spinlock.cpp  spinlock.h  thread_pool.cpp  thread_pool.h
objects/: vault_boy.mtl
src/: buffer.zig  camera.zig  main.zig  math.zig  obj_loader.zig  pixel.zig  shader.zig  x11.zig
